build with gradle fixes